# hello-plugin

./: Hello.hs  HelloWrapper.hs  hello-plugin.cabal
